--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Upstar Music</title>
   </head>
   <body>
     <div id="root"></div>
-  </body>
-  <script src="dist/bundle.js"></script>
+  <script type="text/javascript" src="manifest.c692b8a6161939f900f7.js"></script><script type="text/javascript" src="vendor.2b63adc1b217ac394308.js"></script><script type="text/javascript" src="bundel.f98b266188ad19628e0d.js"></script></body>
 </html>
